MDEV-29461 AddressSanitizer: stack-buffer-overflow in strxmov